--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -2,6 +2,7 @@ html, body{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    
 }
 
 .navbar{
@@ -9,7 +10,7 @@ html, body{
     align-items: center;    
     justify-content: space-between;
     padding: 0 30px;
-    background-color: teal;
+    background-color: #6ee787;
     height: 6rem;
     cursor: pointer;
     
@@ -17,7 +18,7 @@ html, body{
 }
 
 img{
-    height: 8rem;
+    height: 12rem;
     align-items: center;
 
 }
@@ -29,15 +30,19 @@ img{
 
 .nav-list ul li{
     list-style-type: none;
-    font-size: 17px;
+    font-size: 16px;
     font-weight: bold;
-    color: white;
+    color: #000000;
     transition: all ease 0.3s ;
 
 }
 
 .nav-list ul li:hover{
-    color: rgb(4, 189, 189)
+    color:  #087717;
+    font-size: 24px;
+    font-weight: bolder;
+
+    /* transform: translateY(-2px); */
 }
 
 .sign-up{
