did signin page and firebase auth for sign in and sign up. yet to do google and logoit

--- a/src/components/Sign In/SignIn.css
+++ b/src/components/Sign In/SignIn.css
@@ -6,7 +6,7 @@
     padding: 0;
     box-sizing: border-box;
 }
-.sign-up{
+.sign-in{
     height: 100vh;
     display: flex;
     flex-direction: column;
@@ -15,21 +15,13 @@
 }
 
 .auth-container{
-    width: 100%;
+    width: 900px;
     display: flex;
     flex-direction: column;
     gap: 30px;
 }
 
-.name-inputs{
-    display: flex;
-    align-items: space-between;
-    gap: 50px;
-}
 
-#email, #password{
-    width: 100%;
-}
 
 h1{
     text-align: center;
@@ -40,6 +32,15 @@ form{
     margin-bottom: 40px;
 }
 
+.signIn-btn{
+
+    padding: 15px 25px;
+    background-color: #A78BFA;
+    border-radius: 10px;
+    font-size: 20px;
+    font-family: "Gugi", sans-serif;
+    font-weight: 400;
+}
 .google-icon{
     margin-top: 40px;
     cursor: pointer;
@@ -52,16 +53,6 @@ form{
 
 }
 
-.signUp-btn{
-
-    padding: 15px 25px;
-    background-color: #A78BFA;
-    border-radius: 10px;
-    font-size: 20px;
-    font-family: "Gugi", sans-serif;
-    font-weight: 400;
-}
-
 input{
     width: 450px;
 
@@ -70,7 +61,7 @@ input{
 
 }
 
-.to-signIn{
+.to-signUp{
     margin-top: 30px;
     font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     color: #4da8f7;
