--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -28,8 +28,9 @@ img{
     gap: 45px;
 }
 
-.nav-list ul li{
+.nav-list ul li, .up{
     list-style-type: none;
+    text-decoration: none;
     font-size: 20px;
     font-weight: bold;
     color: #000000;
@@ -38,7 +39,8 @@ img{
 
 }
 
-.nav-list ul li:hover{
+
+.nav-list ul li:hover, .up:hover{
     color:  white;
     font-weight: bolder;
 
